# etl-language-comparison

./: .gitignore  README.md  fetch_tweets  reference_output  run_csharp.ps1  run_elixir  run_erlang  run_go  run_haskell  run_mathematica  run_nim  run_nodejs  run_ocaml  run_perl  run_php  run_python  run_ruby  run_ruby_parallel  run_rust  run_scala  run_sh  stats.md
csharp/: .gitignore  Program.cs  README.md  Search.Binary.cs  Search.Plinq.cs  Search.csproj  Search.sln
elixir/: README.md  mix.exs
elixir/lib/: binary_map_actor.ex  map_actor.ex  mapper.ex  mapreduce.ex  reducer.ex  regex_map_actor.ex  utils.ex
elixir/test/: mapreduce_test.exs  reducer_test.exs  test_helper.exs
erlang/: README.md
erlang/mapreduce/: .gitignore  rebar.config
erlang/mapreduce/include/: parser.hrl
erlang/mapreduce/src/: map_actor.erl  mapper.erl  mapreduce.erl  (+4 more)
fixtures/: output_0  output_1
golang/: README.md  search.go
golang/src/: main.go  map.go
haskell/: Makefile  benchmark.prof  haskell.cabal  stack.yaml
haskell/bench/: bench.hs
haskell/executable/: Main.hs
haskell/src/: MapReduce.hs  Matcher.hs
mathematica/: README.md  etl_tweets.m
nim/: mapper.nim
nodejs/: search.js
ocaml/: .gitignore  search.ml  search_hashtbl.ml
perl/: README.md  mapreduce.pl  no-mapreduce.pl
php/: search.php
python/: mapper.py
ruby/: Gemfile  commands.txt  concurrent_mapper.rb  mapreduce.rb  mapreduce_parallel.rb  reducer.rb
ruby_parallel/: commands.txt  map_launcher.rb  mapper.rb  reducer.rb  reduction_launcher.rb
rust/: Cargo.toml  mapreduce.rs
rust/src/: main.rs
scala/: .gitignore  Main.scala  build.sbt
shell/: README.md
(+11 files in other folders)
